--- a/finance/templates/finance/base.html
+++ b/finance/templates/finance/base.html
@@ -27,7 +27,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href='/'>Global Frontier</a>
+        <a class="navbar-brand" href='/'>머니테라피</a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
@@ -76,7 +76,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
             aria-haspopup="true" area-expanded="false">Access<span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="{% url 'login' %}">LOG IN</a></li>
+              <li><a href="{% url 'login' %}">로그인</a></li>
 <!--              <li><a href='/register/'>SIGN IN</a></li> -->
             </ul>
           </li>
@@ -113,7 +113,7 @@
       <br>
       <div class="row">
         <div class="col-sm-2" style="text-align:left;"><h5>Copyright &copy; 2018</h5><h5>Denny Kim</h5></div>
-        <div class="col-sm-4" style="text-align:left;"><h4>About Us</h4><p>We are specialized in global business development.</p></div>
+        <div class="col-sm-4" style="text-align:left;"><h4>About Us</h4><p>We are specialized in personal financial consulting.</p></div>
         <div class="col-sm-5" style="text-align:right;"><br><h4><span class="glyphicon glyphicon-ok"></span> &nbsp; by Denny Kim</h4></div>
       </div>
     </div>
