--- a/finance/templates/finance/globalbuster.html
+++ b/finance/templates/finance/globalbuster.html
@@ -87,7 +87,7 @@
     <div class="jumbotron">
       <h1 class="text-center">머니테리피에 오신것을 환영합니다.</h1>
       <p class="text-center">개개인에게 맟는 재무 심리 상담으로 인생이란 긴 여행에서 막연한 불안감을 제거하여 행복한 삶을 살아갈 수 있도록 도와드립니다.<p>
-      <p class="text-center"><a class="btn btn-primary btn-large" href=# target="_blank" role="button">재무설계 상담받기</a></p>
+      <p class="text-center"><a class="btn btn-primary btn-large" href=# target="_blank" role="button">무료상담 신청하기</a></p>
 <!--      <p class="text-center"><a class="btn btn-primary btn-large" href="#" role="button">Container Asset Tracking</a>
       &nbsp; &nbsp; &nbsp; &nbsp; <a class="btn btn-primary btn-large" href="#" role="button">NB-IoT Asset Trackging</a></p>
 -->
