--- a/finance/templates/finance/globalbuster.html
+++ b/finance/templates/finance/globalbuster.html
@@ -73,7 +73,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-            aria-haspopup="true" area-expanded="false">접속<span class="caret"></span></a>
+            aria-haspopup="true" area-expanded="false">커뮤니티<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="{% url 'login' %}">로그인</a></li>
 <!--              <li><a href='/register/'>SIGN IN</a></li>  -->
